@@ -1406,3 +1406,10 @@ Wed Sep  8 08:58:10 PDT 1999
 (Raster)
 
 raiselower patch applied :)
+
+-------------------------------------------------------------------------------
+
+Wed Sep  8 13:50:50 PDT 1999
+(Mandrake)
+
+A little more refining of kde stuff.  trying to make pager work right.
